# cfdi-control

./: .gitignore  .pre-commit-config.yaml  README.md  build.py  cfdi_control.spec  pyproject.toml  requirements.txt  todo.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dev.yml
docs/: CI_CD.md  DEVELOPER_GUIDE.md  INSTALLATION_GUIDE.md  USER_MANUAL.md
src/: __init__.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  data_models.py  excel_processor.py  xml_parser.py
src/gui/: __init__.py  main_window.py
src/utils/: __init__.py
tests/: README.md  __init__.py  run_tests.py  test_data_models.py  test_excel_processor.py  test_integration.py  test_xml_parser.py
